--- a/1.Udemy/install/.env
+++ b/1.Udemy/install/.env
@@ -2,4 +2,5 @@ MASTER_IP='192.168.56.120'
 K8S1_IP='192.168.56.121'
 K8S2_IP='192.168.56.122'
 K8S3_IP='192.168.56.123'
-RANCHER_VERSION='rancher/rancher:v2.4.3'
+#RANCHER_VERSION='rancher/rancher:v2.4.3'
+RANCHER_VERSION='rancher/rancher'
